--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <link rel="stylesheet" type="text/css" href="/style.css" />
     <link rel="alternate" type="application/rss+xml" title="Pricilla Duff - CANdles by Pricilla" href="/feed.xml" />
   </head>
-  <body style="height: 100%; display: grid;" >
-    <span style="margin: auto;">
+  <body>
+    <br/><br/><br/><br/><br/><br/>
     <h1>CANdles by Pricilla</h1>
-    <h3>We're burning the candle at both ends, to bring you our new website</h3>
+    <h3><i>We're burning the candle at both ends to bring you our new website!</i></h3>
     </span>
   </body>
 </html>
