--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
     <link rel="alternate" type="application/rss+xml" title="Pricilla Duff - CANdles by Pricilla" href="/feed.xml" />
   </head>
   <body>
-    <br/><br/><br/><br/><br/><br/>
+    <br/><br/><br/><br/><br/>
+    <center>
     <h1>CANdles by Pricilla</h1>
     <h3><i>We're burning the candle at both ends to bring you our new website!</i></h3>
-    </span>
+    </center>
   </body>
 </html>
